--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aboutkat": "file:",
     "classnames": "^2.3.2",
-    "dompurify": "3.0 3",
+    "dompurify": "^3.2.1",
     "emailjs-com": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
